HW2, homework and tests